fixed no overflow x for mobile

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,9 @@ body {
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+#noOverFlow{
+	overflow-x: hidden;
+}
 #background {
 	width: 100%;
 	height: 100%;
